2007-03-01  Larry Jones  <lawrence.jones@ugs.com>

	* import.c (import_descend_dir): Correct error message.
	* sanity.sh (pserver-3a): New test.

2006-09-14  Derek Price  <derek@ximbiot.com>

	* sanity.sh (server3, client2): New tests.

2006-09-07  Derek Price  <derek@ximbiot.com>

	[bug #17560]
	* rcs.c (apply_rcs_changes): Improve comments.  Restore repaired error
	handling.

2006-09-06  Larry Jones  <lawrence.jones@ugs.com>

	* rcs.c (apply_rcs_changes): Improve linked list handling.  Remove
	unused variables and unreachable error handling code.  Avoid unneeded
	dynamic allocation of temp linevector.  Minor stylistic code clean up.

2006-09-06  Derek Price  <derek@ximbiot.com>

	[bug #17560]
	* rcs.c (apply_rcs_changes): Improve header block comment.  Clean up
	unused linevector on non-fatal error.

2006-09-06  Derek Price  <derek@ximbiot.com>

	[bug #17560]
	* rcs.c (apply_rcs_changes): Remove an unecessary memcpy.  Avoid some
	other processing on error.
	(linevector_delete): Remove - it's no longer used.

2006-09-06  Mark D. Baushke  <mdb@gnu.org>

	[bug #17560]
	* rcs.c (apply_rcs_changes): Fix the merge algorithm from O(n^2)
	to O(n).
	(Based on a patch submitted by "Michael J. Smith"
	<msmith@ideorlando.org>)

2006-08-28  Derek Price  <derek@ximbiot.com>

	* recurse.c (do_recursion): Remove misguided assertion.
	* sanity.sh (dottedroot-3): Add test for the above.
	(Thanks to report from Paul Eggert <eggert@CS.UCLA.EDU>.)

	[bug #17168]
	* classify.c (Classify_File): Use T_PATCH for changed keywords instead
	of T_CHECKOUT to conserver bandwidth.  Don't sticky check when marking
	files for update anyhow.
	* sanity.sh: Update to compensate (s/^U /[UP] /).

2006-08-25  Derek Price  <derek@ximbiot.com>

	[bug #17168]
	* classify.c (Classify_file): Mark files with potential keyword
	substitution changes as needing update.
	* sanity.sh: Update to compensate.
	(keyword, keywordname, serverpatch): Update to compensate, removing
	the last few "checksum failed" tests.